@@ -1,5 +1,5 @@
 /*
-   Copyright (C) 2003-2012, 2014-2016 Free Software Foundation, Inc.
+   Copyright (C) 2003-2012, 2014-2017 Free Software Foundation, Inc.
    Written by Keisuke Nishida, Roger While, Simon Sobisch
 
    This file is part of GnuCOBOL.
@@ -52,7 +52,10 @@ CB_FLAG_RQ (cb_fold_call, 1, "fold-call", 0, 5,
 	 _("fold PROGRAM-ID, CALL, CANCEL subject to value"), "[UPPER|LOWER]", _("no transformation"))
 
 CB_FLAG_RQ (cb_default_byte, 1, "defaultbyte", -1, 6,
-	 _("initialize fields without VALUE to decimal value"), "0..255", _("initialize to picture"))
+	 _("initialize fields without VALUE to decimal value"), _("0..255 or any quoted character"), _("initialize to picture"))
+
+CB_FLAG_RQ (cb_max_errors, 1, "max-errors", 100, 7,
+	 _("maximum number of errors to report"), _("<number>"), "100")
 
 /* Flags with required parameter and no associated variable */
 
